--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,11 +5,16 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  cursor: default !important;
+}
+
+.navbar {
+  position: sticky !important;
 }
 
 @font-face {
   font-family: 'MyCustomFont';
-  src: url('assets/fonts/font.woff2') format('woff2');
+  src: url('/assets/fonts/font.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
@@ -20,4 +25,26 @@
 
 i {
   font-family: "Font Awesome 5 Free" !important;
+}
+
+.bg-image {
+  height: 100vh !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important; 
+  background-size: cover !important;
+}
+
+.bg-image {
+  width: 100% !important;
+  padding-top: 56.25% !important; /* 16:9 aspect ratio */
+}
+
+.bg-image {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover !important; 
+  z-index: -1 !important;
 }
